client/src/widgets/anime_general_info/ui/styles.module.scss
.anime_general_info_container {
   display: flex;
   gap: 20px;
   margin-bottom: 25px;
}

.anime_poster {
   max-width: 250px;
   width: 100%;

   .anime_poster_container {
      position: relative;

      img {
         height: 350px;
      }

      .rate_star {
         top: 5px;
         right: 5px;
         z-index: 5;
         position: absolute;
         background: url("../assets/rate-star.svg");
         width: 25px;
         height: 25px;
         background-size: cover;
         background-repeat: no-repeat;
      }
   }
}

.rate_star_list {
   display: flex;
   justify-content: center;
   align-content: center;
   flex-direction: column;

   .rate_star_item {
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 5px 0;
      transition: background-color 0.2s ease-in;
      cursor: pointer;
      border-radius: 5px;
   }

   .rate_star_item:hover {
      background-color: #b9b9b9;
   }
}

.anime_info_box {
   width: 100%;

   hr {
      height: 1px;
      background-color: #999;
      margin: 10px 0;
      opacity: 0.5;
   }
}

.title_anime {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 36px;
   text-align: center;
   margin-bottom: 25px;
   font-weight: 300;
   line-height: 48px;
}

.anime_info_list {
   margin-bottom: 20px;

   .anime_info_item {
      display: flex;
      line-height: 24px;
      margin-bottom: 5px;

      p,
      span {
         flex: 1;
         font-family: "Franklin Gothic Medium", "Arial Narrow", sans-serif;
         font-weight: normal;
      }
      .anime_genres_container {
         flex: 1;
      }

      .anime_genres_list {
         display: flex;
         flex-wrap: wrap;
      }

      .anime_genre {
         background-color: #343a40;
         font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
         border-radius: 8px;
         color: #fff;
         padding: 3px 5px;
         margin-right: 10px;
         margin-bottom: 5px;
         display: flex;
         justify-content: center;
         align-items: center;
      }

      .minimal_age {
         background-color: #f66;
         color: #fff;
         max-width: 40px;
         text-align: center;
         border-radius: 8px;
         padding: 2px 5px;
      }
   }
}

.anime_description {
   text-align: justify;
   margin-bottom: 25px;
}

